# prism

./: .gitattributes  .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: check.yml
calculations/: _common.py  chromatic_adaptation.py  cielab.py  pyproject.toml  rgb_xyz.py
src/: base.ts  cielab.ts  ciexyz.ts  index.ts  srgb.ts
src/internal/: linalg.ts
test/: base.test.ts  tsconfig.json
