[project]
name = "calculations"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",  #
    "sympy (>=1.14.0,<2.0.0)", #
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
